After class 74 "Building the Overall Layout"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
-    <h1>Trillo</h1>
+    <div class="container">
+        <header class="header">
+            Header part
+        </header>
+        <div class="content">
+            <nav class="sidebar">
+                Navigation
+            </nav>
+            <main class="hotel-view">
+                Hotel view
+            </main>
+        </div>
+    </div>
 </body>
 </html>
