After class 81 "Building the Hotel Overview - Part 2"

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="overview">
-                    <h1 class="overview__headeing">
+                    <h1 class="overview__heading">
                         Hotel Las Palmas
                     </h1>
                     <div class="overview__stars">
@@ -127,7 +127,7 @@
                     </div>
 
                     <div class="overview__rating">
-                        <div class="overview__rating-avaerage">8.6</div>
+                        <div class="overview__rating-average">8.6</div>
                         <div class="overview__rating-count">429 votes</div>
                     </div>
                 </div>
