--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                                 Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
                         </p>
                         <ul class="list">
-                            <li class="list-item">Close to the beach</li>
-                            <li class="list-item">Breakfast included</li>
-                            <li class="list-item">Free airport shuttle</li>
-                            <li class="list-item">Free wifi in all rooms</li>
-                            <li class="list-item">Air conditioning and heating</li>
-                            <li class="list-item">Pets allowed</li>
-                            <li class="list-item">We speak all languages</li>
-                            <li class="list-item">Perfect for families</li>
+                            <li class="list__item">Close to the beach</li>
+                            <li class="list__item">Breakfast included</li>
+                            <li class="list__item">Free airport shuttle</li>
+                            <li class="list__item">Free wifi in all rooms</li>
+                            <li class="list__item">Air conditioning and heating</li>
+                            <li class="list__item">Pets allowed</li>
+                            <li class="list__item">We speak all languages</li>
+                            <li class="list__item">Perfect for families</li>
                         </ul>
                         <div class="recommend">
                             <p class="recommend__count">
